# x_epi

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  default.json  default.seq  pyproject.toml  requirements.txt  x_epi.py  x_epi.ui  x_epi_app.py  x_epi_cmd.py  x_epi_ui.py
.doctrees/: api.doctree  environment.pickle  index.doctree
.github/workflows/: codecov.yaml  publish_to_pypi.ymal  pylint.yml
docs/: genindex.html  index.html  install.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  tutorial.html
docs/.doctrees/: api.doctree  cmd.doctree  environment.pickle  index.doctree  install.doctree  tutorial.doctree  ui.doctree  usage.doctree
docs/.doctrees/doc/: api.doctree  cmd.doctree  index.doctree  ui.doctree
docs/.doctrees/ref/: api.doctree  cmd.doctree  index.doctree  ui.doctree
docs/.doctrees/use/: api.doctree  cmd.doctree  index.doctree  ui.doctree
docs/_sources/: index.rst.txt  install.rst.txt  tutorial.rst.txt
docs/_sources/doc/: api.rst.txt  cmd.rst.txt  index.rst.txt
docs/_sources/recon_doc/: index.rst.txt
docs/_sources/seq_doc/: api.rst.txt  index.rst.txt
docs/_static/: documentation_options.js
docs/doc/: api.html  cmd.html  index.html  ui.html
docs/doc/cmd/: gen.html  index.html  met.html
docs/recon_doc/: api.html  cmd.html  index.html
docs/seq_doc/: api.html  index.html  ui.html
docs/source/: conf.py  index.rst  install.rst  tutorial.rst
gui/: ui.py  x_epi_app.py
paper/: README.md  run_all.tcsh
paper/fig_1/: fig_1.py  three_met.json  three_met.seq
paper/fig_2/: anat.json  fig_2.py  fig_2.tcsh  mag.json  single_echo_no_rs.json  single_echo_no_rs_ref.json
paper/fig_3/: fig_3.py  fig_3.tcsh  multi_echo_no_rs.json  multi_echo_no_rs_ref.json
paper/fig_4/: anat.json  fig_4.py  fig_4.tcsh  fit_kpl.m  kpl_fit.mat  mag_1.json  pha.json  single_echo_ref.json
paper/fig_s2/: fig_s2.py  siemens_singleband_pyr_3T.GRD  siemens_singleband_pyr_3T.RF  siemens_singleband_pyr_3T.m  siemens_singleband_pyr_3T.xml  sim_pulse.jl
paper/fig_s3/: fig_s3.py  fig_s3.tcsh  pha.json  single_echo_rs.json  single_echo_rs_ref.json
paper/fig_s4/: fig_s4.py  fig_s4.tcsh  mag.json  pha.json  seq_for_recon.json  seq_for_recon.seq
paper/fig_s5/: fig_s5.py
paper/py/: cmplx_mean.py  cmplx_to_plr.py  compute_snr_vox.py  pocs_recon.py  shift_mod.py  swap_dims.py
ssrf/: singleband_120slew_24cm_2df.RF  singleband_120slew_24cm_2df.xml  singleband_120slew_slower_24cm_2df.GRD
tests/: test_XEPI.py  test_ui.py  test_utils.py  test_x_data.py  test_x_epi.py  test_x_epi_cmd.py  test_x_seq.py
tests/fixtures/: create_fixtures.py  epi_3d.json  epi_3d_params.json  k_space_3d.npy  k_space_3d.pkl  k_space_no_z.npy  k_space_no_z.pkl  phantom.json  phantom_params.json  ramp_samp_k_data.npy  ramp_samp_params.json  seq_1.json  seq_1.seq  seq_2.json  seq_2.seq  seq_3.json  seq_3.seq  seq_4.json  seq_4.seq  test_pars.json
tutorial_data/: tutorial.json  tutorial.seq  tutorial_kspace.npy  tutorial_ref.json  tutorial_ref.seq  tutorial_ref_kspace.npy
x_epi/: XEPI.py  __init__.py  data.py  seq.py  ui.py  utils.py  x_epi.py
x_epi/designer/: x_epi.ui
x_epi/res/: default.json  ssrf_cal.py  ssrf_cal_coarse.seq  ssrf_cal_fine.seq
(+20 files in other folders)
