[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "x_epi"
authors = [{name = "Tyler Blazey", email = "blazey@wustl.edu"}]
description = "A package for creating EPI sequences for X-Nuclues imaging"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['matplotlib',
                'nibabel',
                'numpy',
                'pypulseq@git+https://github.com/tblazey/pypulseq#egg=dev',
                'PyQt5',
                'PyQt5_sip',
                'scipy'
]

[project.scripts]
x_epi_cmd = "x_epi.bin.x_epi_cmd:main"
x_epi_gui = "x_epi.bin.x_epi_gui:main"
x_epi_recon = "x_epi.bin.x_epi_recon:main"

[project.urls]
"Homepage" = "https://github.com/tblazey/x_epi"

[tool.setuptools.package-data]
"x_epi.res" = ["*.json", "*.seq", "*.GRD", "*.RF", "*.png"]

[tool.coverage.run]
branch = true
source = ["x_epi"]